--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -41,7 +41,9 @@
 </div> 
 
 <style>
-
+  .changing-experiences {
+    background: rgba(232,	232,	176, .2);
+  }
   .quote-slider .swiper-slide.swiper-slide-active .quote-card  {
     top: 0;
     max-width: 60%;
