--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -47,7 +47,7 @@
   .quote-slider .swiper-slide.swiper-slide-active .quote-card  {
     top: 0;
     max-width: 60%;
-    background: unset;
+    background: transparent;
     box-shadow: unset;
   }
   .quote-slider .slider-control {
