--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -47,8 +47,12 @@
   .quote-slider .swiper-slide.swiper-slide-active .quote-card  {
     top: 0;
     max-width: 60%;
-    background: transparent;
+    background: unset;
     box-shadow: unset;
+  }
+
+  .quote-card {
+    background: unset;
   }
   .quote-slider .slider-control {
     justify-content: space-between;
