--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -93,6 +93,14 @@
     .quote-slider .swiper-slide.swiper-slide-active .quote-card {
       max-width: 80%;
     }
+
+    .quote-slider .prev-slide2 span {
+      font-size: 22px;
+    }
+
+    .quote-slider .next-slide2 span {
+      font-size: 22px;
+    }
   } 
 
 @media screen and (max-width: 629px) {
