--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -96,10 +96,12 @@
 
     .quote-slider .prev-slide2 span {
       font-size: 22px;
+      background: unset;
     }
 
     .quote-slider .next-slide2 span {
       font-size: 22px;
+      background: unset;
     }
   } 
 
