--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -297,7 +297,9 @@
     }
 
     @media all and (min-width: 1130px) {
-
+      .curalin-pack-info-section .ingredients {
+        max-width: unset;
+      }  
     .curalin-pack-info-section .tabbed-content {
       max-width: unset;
     }
