--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -52,11 +52,16 @@ health.'
   {% else %}
     {% render 'product-supplement-pack-info', product: product, isLastRender: true %}
   {% endif %}
+  
+  {% if isCuralinNew %}
+      {% render 'curalin-supplement-info-section', titleColor: title_color %}
+      {% else %}
+      {% unless product.title contains "Curalin Monthly Deals" %}
+        {% render 'product-supplement-info-section', titleColor: title_color %}
+      {% endunless %}
+  {% endif %}
 
 
-  {% unless product.title contains "Curalin Monthly Deals" %}
-    {% render 'product-supplement-info-section', titleColor: title_color %}
-  {% endunless %}
 
   {% if isCuralinBundled %}
     {% render 'product-supplement-doctors-section' %}
