--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -1,9 +1,9 @@
-<section id="info-section">
+<section id="curalin-info-section">
   <div class="container">
     
    
    
-    <img class="main-image" src="{{ "product-supplement-info-section-main-image.png" | asset_url }}" width="925" height="688" alt="Joint Info" loading="lazy">
+    <img class="main-image" src="{{ "product-supplement-curalin-info-section-main-image.png" | asset_url }}" width="925" height="688" alt="Joint Info" loading="lazy">
 
     <div class="content">
       <h2 class="title">{{ product.metafields.custom.info_section_title }}</h2>
@@ -15,57 +15,57 @@
 </section>
 
 <style>
-  #info-section {
+  #curalin-info-section {
     background: #ECF2F2;
     padding: 50px 0;
   }
 
-  #info-section .container {
+  #curalin-info-section .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
 
-  #info-section .content {
+  #curalin-info-section .content {
     max-width: 500px;
   }
 
-  #info-section .main-image {
+  #curalin-info-section .main-image {
     margin-left: -300px;
   }
 
-  #info-section h2 {
-    color: {{ titleColor }};
+  #curalin-info-section h2 {
+    color: #ECF2F2;
     white-space: unset !important;
   }
 
-  #info-section h3 {
+  #curalin-info-section h3 {
     margin: 30px 0;
     font-size: 24px;
   }
 
-  #info-section .line {
+  #curalin-info-section .line {
     width: 100px;
     margin: 30px 0;
     border-bottom: 1px solid black;
   }
 
-  #info-section p {
+  #curalin-info-section p {
     white-space: pre-line;
   }
 
-  #info-section .description  {
+  #curalin-info-section .description  {
     white-space: pre-wrap;
   }
 
   @media screen and (max-width: 768px) {
-    #info-section .main-image {
+    #curalin-info-section .main-image {
       display: none;
     }
 
 
 
-    #info-section .content {
+    #curalin-info-section .content {
       max-width: 100%;
     }
   }
