--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -55,8 +55,8 @@ health.'
   
   {% if isCuralinNew %}
       {% render 'curalin-supplement-info-section' %}
-{% endif %}
-      {% unless product.title contains "Curalin Monthly Deals" or isCuralinNew %}
+  {% endif %}
+      {% unless  isCuralinNew %}
         {% render 'product-supplement-info-section', titleColor: title_color %}
     {% endunless %}
  
