--- a/snippets/curalin-pack-new-results.liquid
+++ b/snippets/curalin-pack-new-results.liquid
@@ -4,7 +4,7 @@
     <div class="curalin-new-for-you-wrapper">
       
       <div class="sub-title">
-        <h3><b>Real people. Real results</b></h3>      
+        <h3><b>Hello people. Real results</b></h3>      
       </div>
     
     </div>
