--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -55,11 +55,12 @@ health.'
   
   {% if isCuralinNew %}
       {% render 'curalin-supplement-info-section' %}
-  {% endif %}
-      {% unless  isCuralinNew %}
+   {% else %}
+      {% unless product.title contains "Curalin Monthly Deals" %}
         {% render 'product-supplement-info-section', titleColor: title_color %}
-    {% endunless %}
- 
+      {% endunless %}
+  {% endif %}
+
 
 
   {% if isCuralinBundled %}
