--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -2,7 +2,7 @@
   <div class="container">
     
     <div class="content">
-      <h2 class="title">{{ product.metafields.custom.info_section_title }}</h2>
+      {% comment %} <h2 class="title">{{ product.metafields.custom.info_section_title }}</h2> {% endcomment %}
       <div class="line"></div>
       <p class="description">{{ product.metafields.custom.info_section_description }}</p>  
     </div>
