--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -2,10 +2,11 @@
   <div class="container">
     
     <div class="content">
-      {% comment %} <h2 class="title">{{ product.metafields.custom.info_section_title }}</h2> {% endcomment %}
+       <h2 class="title">{{ product.metafields.custom.info_section_title }}</h2>
       <div class="line"></div>
       <p class="description">{{ product.metafields.custom.info_section_description }}</p>  
     </div>
+    <img class="main-image" src="{{ "product-supplement-curalin-info-section-main-image.png" | asset_url }}" width="925" height="688" alt="Joint Info" loading="lazy">
   </div>
 </section>
 
