--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -1,7 +1,7 @@
 <section id="curalin-info-section">
   <div class="container">
     
-    <div class="content">
+    <div class="curalin-content">
        <h2 class="title">{{ product.metafields.custom.info_section_title }}</h2>
       <div class="line"></div>
       <p class="description">{{ product.metafields.custom.info_section_description }}</p>  
@@ -19,10 +19,10 @@
   #curalin-info-section .container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-curalin-content: space-between;
   }
 
-  #curalin-info-section .content {
+  #curalin-info-section .curalin-content {
     max-width: 500px;
   }
 
@@ -61,7 +61,7 @@
 
 
 
-    #curalin-info-section .content {
+    #curalin-info-section .curalin-content {
       max-width: 100%;
     }
   }
