--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -2,7 +2,7 @@
   <div class="container">
     
     <div class="curalin-content">
-       <h2 class="curalin-title">{{ product.metafields.custom.info_section_curalin-title }}</h2>
+       <h2 class="curalin-title">{{ product.metafields.custom.info_section_title }}</h2>
       <div class="line"></div>
       <p class="description">{{ product.metafields.custom.info_section_description }}</p>  
     </div>
