--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -31,7 +31,14 @@
   }
 
   #curalin-info-section h2 {
-    color: #ECF2F2;
+    color: #5E8F8F;
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 88px;
+    line-height: 93px;
+    display: flex;
+    align-items: flex-end;
+    text-transform: capitalize;
     white-space: unset !important;
   }
 
