--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -19,7 +19,7 @@
   #curalin-info-section .container {
     display: flex;
     align-items: center;
-    justify-curalin-content: space-between;
+    justify-content: space-between;
   }
 
   #curalin-info-section .curalin-content {
