--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -25,10 +25,6 @@
     max-width: 500px;
   }
 
-  #curalin-info-section .main-image {
-    margin-left: -300px;
-  }
-
   #curalin-info-section h2 {
     color: #5E8F8F;
     font-family: 'PP Radio Grotesk';
@@ -54,6 +50,10 @@
   }
 
   @media screen and (max-width: 768px) {
+
+    #curalin-info-section .container {
+        flex-direction: column;
+    }
     #curalin-info-section .curalin-content {
       max-width: 100%;
     }
