--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -57,5 +57,10 @@
     #curalin-info-section .curalin-content {
       max-width: 100%;
     }
+
+    #curalin-info-section h2 {
+      text-align: center;
+      font-size: 8vw;
+    }
   }
 </style>
