--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -62,5 +62,10 @@
       text-align: center;
       font-size: 8vw;
     }
+
+    #curalin-info-section .description {
+      text-align: center;
+      font-size: 6vw;
+    }
   }
 </style>
