--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -25,7 +25,7 @@
     max-width: 500px;
   }
 
-  #curalin-info-section h2 {
+  #curalin-info-section .curalin-title {
     color: #5E8F8F;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
@@ -58,7 +58,7 @@
       max-width: 100%;
     }
 
-    #curalin-info-section h2 {
+    #curalin-info-section .curalin-title {
       text-align: center;
       font-size: 8vw;
     }
