--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -61,6 +61,7 @@
     #curalin-info-section .curalin-title {
       text-align: center;
       font-size: 8vw;
+      justify-content: center;
     }
 
     #curalin-info-section .description {
