--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -29,7 +29,7 @@
     color: #5E8F8F;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 88px;
+    font-size: (70px, 2vw, 88px);
     line-height: 93px;
     display: flex;
     align-items: flex-end;
