--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -25,12 +25,11 @@
     max-width: 500px;
   }
 
-  #curalin-info-section .curalin-title {
+  #curalin-info-section .curalin-title h2 {
     color: #5E8F8F;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: (70px, 2vw, 88px);
-    line-height: 93px;
     display: flex;
   }
 
