--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -2,7 +2,7 @@
   <div class="container">
     
     <div class="curalin-content">
-       <h2 class="curalin-title">{{ product.metafields.custom.info_section_title }}</h2>
+       <div class="curalin-title">{{ product.metafields.custom.info_section_title }}</div>
       <p class="description">{{ product.metafields.custom.info_section_description }}</p>  
     </div>
     <img class="main-image" src="{{ "curalin-info-section-men.png" | asset_url }}" width="362" height="839" alt="Joint Info" loading="lazy">
@@ -25,7 +25,7 @@
     max-width: 500px;
   }
 
-  #curalin-info-section .curalin-title h2 {
+  #curalin-info-section .curalin-title {
     color: #5E8F8F;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
