--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -2,7 +2,7 @@
   <div class="container">
     
     <div class="curalin-content">
-       <div class="curalin-title">{{ product.metafields.custom.info_section_title }}</div>
+       <h2 class="curalin-title">{{ product.metafields.custom.info_section_title }}</h2>
       <p class="description">{{ product.metafields.custom.info_section_description }}</p>  
     </div>
     <img class="main-image" src="{{ "curalin-info-section-men.png" | asset_url }}" width="362" height="839" alt="Joint Info" loading="lazy">
@@ -29,7 +29,7 @@
     color: #5E8F8F;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: (70px, 3vw, 88px) !important;
+    font-size: 88px;
     display: flex;
     text-transform: capitalize;
   }
@@ -37,7 +37,7 @@
  
 
 
-  #curalin-info-section .description  {
+  #curalin-info-section .description h2  {
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 400;
@@ -55,7 +55,7 @@
       max-width: 100%;
     }
 
-    #curalin-info-section .curalin-title {
+    #curalin-info-section .curalin-title h2 {
       text-align: center;
       font-size: 8vw;
       justify-content: center;
