--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -1,15 +1,16 @@
-<section id="curalin-info-section">
+<div id="curalin-info-section">
   <div class="container">
     
     <div class="curalin-content">
-       <h2 class="curalin-title">{{ product.metafields.custom.info_section_title }}</h2>
+       <div class="curalin-title">{{ product.metafields.custom.info_section_title }}</div>
       <p class="description">{{ product.metafields.custom.info_section_description }}</p>  
     </div>
     <img class="main-image" src="{{ "curalin-info-section-men.png" | asset_url }}" width="362" height="839" alt="Joint Info" loading="lazy">
   </div>
-</section>
+</div>
 
 <style>
+
   #curalin-info-section {
     background: #ECF2F2;
     padding: 50px 0;
@@ -29,7 +30,7 @@
     color: #5E8F8F;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 88px;
+    font-size: clamp(70px, 3vw, 88px);
     display: flex;
     text-transform: capitalize;
   }
@@ -37,7 +38,7 @@
  
 
 
-  #curalin-info-section .description h2  {
+  #curalin-info-section .description   {
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 400;
@@ -55,7 +56,7 @@
       max-width: 100%;
     }
 
-    #curalin-info-section .curalin-title h2 {
+    #curalin-info-section .curalin-title  {
       text-align: center;
       font-size: 8vw;
       justify-content: center;
