--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -31,6 +31,7 @@
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: clamp(70px, 3vw, 88px);
+    line-height: 93px;
     display: flex;
     text-transform: capitalize;
   }
