--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -60,6 +60,7 @@
     #curalin-info-section .curalin-title  {
       text-align: center;
       font-size: 8vw;
+      line-height: 36px;
       justify-content: center;
     }
 
