--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -1,4 +1,6 @@
 <div id="curalin-info-section">
+  <img class="back-image" src="{{ "curalin-info-section-vector.png" | asset_url }}" width="896" height="501" alt="swoosh" loading="lazy">
+  </div>
   <div class="container">
     
     <div class="curalin-content">
@@ -15,6 +17,11 @@
     position: relative;
     background: #ECF2F2;
     padding: 50px 0;
+  }
+
+  #curalin-info-section .back-image {
+    position: absolute;
+    top: 0;
   }
 
   #curalin-info-section .container {
