--- a/snippets/curalin-supplement-info-section.liquid
+++ b/snippets/curalin-supplement-info-section.liquid
@@ -58,6 +58,9 @@
 
   @media screen and (max-width: 768px) {
 
+  #curalin-info-section .back-image {
+      display: none;
+    }
     #curalin-info-section .container {
         flex-direction: column;
     }
