--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -216,6 +216,7 @@
     }
 
     .curalin-pack-info-section .tabbed-content {
+      max-width: 1000px;
       display: flex;
       align-items: center;
     }
