--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -196,7 +196,7 @@
     }
 
     .curalin-pack-info-section .ingredient {
-      width: 120px;
+      width: 30%;
       display: flex;
       flex-direction: column;
       align-items: center;
