--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -190,6 +190,7 @@
 
     .curalin-pack-info-section .ingredients {
       display: flex;
+      justify-content: center;
       flex-wrap: wrap;
       max-width: 400px;
       gap: 10px;
@@ -297,7 +298,7 @@
 
     @media all and (min-width: 1130px) {
       .curalin-pack-info-section .ingredients {
-        max-width: unset;
+        max-width: 100%;
       }  
   
 
