--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -290,6 +290,8 @@
     }
 
     .curalin-pack-info-section .tabbed-content .item.active .item-content {
+      display: flex;
+      justify-content: center;
       opacity: 1;
       visibility: visible;
       height: auto;
