--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -403,6 +403,9 @@
 
     @media screen and (max-width: 768px) {
       .curalin-pack-info-section .health-benefits .health-benefit {
+        width: 40%;
+      }
+      .curalin-pack-info-section .health-benefits .health-benefit {
         gap: 2vw;
       }
       .curalin-pack-info-section .health-benefits .health-benefit p {
