--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -174,8 +174,9 @@
 
     .curalin-pack-info-section .instructions .step {
       display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 70%;
     }
 
     .curalin-pack-info-section .instructions .step h3 {
