--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -170,6 +170,7 @@
       display: flex;
       flex-direction: column;
       gap: 30px;
+      max-width: 650px;
     }
 
     .curalin-pack-info-section .instructions .step {
@@ -177,6 +178,10 @@
       justify-content: space-between;
       align-items: center;
       max-width: 70%;
+    }
+
+    .curalin-pack-info-section .instructions .step p {
+        min-width: 210px;
     }
 
     .curalin-pack-info-section .instructions .step h3 {
