--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -175,6 +175,7 @@
 
     .curalin-pack-info-section .instructions .step {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
       max-width: 70%;
