--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -41,6 +41,10 @@
 </div> 
 
 <style>
+
+  .mini-wrap {
+    width: 80%;
+  }
   .changing-experiences {
     background: rgba(232,	232,	176, .2);
   }
