--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -358,13 +358,13 @@
         content: "+";
         font-size: 30px;
         position: absolute;
-        top: 0.2vw;
+        top: 5px;
         right: 2vw;
         border: 2px solid var(--light-green);
         border-radius: 50%;
         width: 5vw;
         height: 5vw;
-        font-size: 6vw;
+        font-size: 5vw;
         display: flex;
         align-items: center;
         justify-content: center;
