--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -418,6 +418,12 @@
       .curalin-pack-info-section .health-benefits .health-benefit p {
         font-size: 2.5vw;
       }
+
+      @media screen and (max-width: 500px) {
+        .curalin-pack-info-section .item::after {
+            top: 3vw;
+        }
+      }
     }
   </style>
 {% endif %}
