--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -46,6 +46,7 @@
     width: 80%;
   }
   .changing-experiences {
+    width: 50%;
     background: rgba(232,	232,	176, .2);
   }
   .quote-slider .swiper-slide.swiper-slide-active .quote-card  {
@@ -104,6 +105,10 @@
   }
 
   @media screen and (max-width: 768px) {
+
+  .changing-experiences {
+    width: 100%;
+  }
 
     .mini-wrap {
       width: 100%;
