--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -42,6 +42,10 @@
 
 <style>
 
+.swiper-autoheight .swiper-wrapper {
+  transition-property: unset !important;
+}
+
   .mini-wrap {
     width: 80%;
   }
