--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -42,7 +42,8 @@
 
 <style>
 
-.swiper-autoheight .swiper-wrapper {
+ .swiper-wrapper {
+  transform: unset;
   transition-property: unset !important;
 }
 
