--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -44,7 +44,7 @@
 
  .swiper-wrapper {
   transform: unset;
-  transition-property: unset !important;
+  transition-property: unset;
 }
 
   .mini-wrap {
