--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -30,6 +30,7 @@
             </div>
             {% endfor %}
           </div>
+          <div class="swiper-pagination"></div>
           <div class="slider-control">
             <div id="product-main-slider-nav-prev" class="swiper-button-prev nav"></div>
             <div id="product-main-slider-nav-next" class="swiper-button-next nav"></div>
