--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -30,10 +30,9 @@
             </div>
             {% endfor %}
           </div>
-          <div class="swiper-pagination"></div>
           <div class="slider-control">
-            <div id="product-main-slider-nav-prev" class="swiper-button-prev nav"></div>
-            <div id="product-main-slider-nav-next" class="swiper-button-next nav"></div>
+            <div class="prev-slide2"><span class="icon-arrow"></span></div>
+            <div class="next-slide2"><span class="icon-arrow"></span></div>
           </div>
         </div>
       </div>
@@ -138,7 +137,7 @@
 </style>
 
 
- {% comment %} <script>
+ <script>
   quoteSlider = new Swiper(".quote-slider .swiper", {
     slidesPerView: 1,
     spaceBetween: 0,
@@ -164,36 +163,4 @@
       }
     }
   });
-</script>  {% endcomment %}
-
-<script>
-  productSliderAllInOne = new Swiper('.quote-slider .swiper', {
-    slidesPerView: 1,
-    spaceBetween: 15,
-    centeredSlides: true,
-    watchSlidesVisibility: true,
-    loop: false,
-    grabCursor: true,
-    slideToClickedSlide: true,
-    thumbs: {swiper: productThumbsAllInOne},
-    breakpoints: {
-      0: {
-        pagination: {
-          el: '.swiper-pagination',
-          clickable: 'true',
-          type: 'bullets',
-        },
-        navigation: {
-          nextEl: '#product-main-slider-nav-next',
-          prevEl: '#product-main-slider-nav-prev',
-          disabledClass: 'disabled'
-        },
-        loop:true
-      },
-      760: {
-        pagination: {},
-        navigation: {}
-      }
-    }
-  });
-</script>
+</script> 
