--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -416,6 +416,12 @@
         min-width: 20vw;
       }
     }
+
+    @media screen and (max-width: 500px) {
+      .pack-info-section .item::after {
+        top: 4vw;
+      }
+    }
   </style>
 {% endif %}
 
