--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -364,7 +364,7 @@
         content: "+";
         font-size: 30px;
         position: absolute;
-        top: 0.2vw;
+        top: 5px;
         right: 2vw;
         border: 2px solid var(--light-green);
         border-radius: 50%;
