--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -140,26 +140,30 @@
  <script>
   quoteSlider = new Swiper(".quote-slider .swiper", {
     slidesPerView: 1,
-    spaceBetween: 0,
+    spaceBetween: 15,
+    centeredSlides: true,
+    watchSlidesVisibility: true,
+    loop: false,
     grabCursor: true,
-    autoHeight: true,
-    loop: true,
-    navigation: {
-      nextEl: ".next-slide2",
-      prevEl: ".prev-slide2",
-      disabledClass: 'disabled'
-    },
+    slideToClickedSlide: true,
+    thumbs: {swiper: productThumbsAllInOne},
     breakpoints: {
       0: {
-        slidesPerView: 1
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: 'true',
+          type: 'bullets',
+        },
+        navigation: {
+          nextEl: '.next-slide2',
+          prevEl: '.prev-slide2',
+          disabledClass: 'disabled'
+        },
+        loop:true
       },
-      630: {
-        slidesPerView: 1,
-        centeredSlides: false
-      },
-      992: {
-        slidesPerView: 1,
-        centeredSlides: true
+      760: {
+        pagination: {},
+        navigation: {}
       }
     }
   });
