--- a/snippets/onboarding-curalin-call-expert.liquid
+++ b/snippets/onboarding-curalin-call-expert.liquid
@@ -18,7 +18,7 @@
 
           <p>With your purchase of {{ product_title }}, you can schedule a free 15 minute call with one of our customer success experts to answer all your questions about {{ product_title }}! They will help guide your first 5 days on {{ product_title }} so you can go into it with confidence!</p>
           <div class="call">
-            <a href="https://calendly.com/hellocuralife">
+            <a href="https://calendly.com/hellocuralife" target="_blank">
               <button>
                 <span class="call-text">Schedule a call
                   <img src="{{ 'onboarding-call-sign.png' | asset_url }}" width="33" height="35" alt="" loading="lazy"></span>
