--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -193,6 +193,11 @@
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
+      align-items: center;
+    }
+
+    .pack-info-section .instructions .step p {
+      min-width: 120px;
     }
 
     .pack-info-section .instructions .step h3 {
