--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -364,6 +364,10 @@
         padding-bottom: 75vw;
       }
 
+      .pack-info-section .instructions .step .capsules {
+        min-width: 65px;
+      }
+
       .pack-info-section .tabbed-content {
         display: block;
         margin-left: unset !important;
