--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -1,4 +1,4 @@
-<a id="back-to-top-btn">{% if isThirtyDay %}Join the Challenge!{% else %}Try CuraLin{% endif %}</a>
+<a id="back-to-top-btn">{% if isThirtyDay %}Join the Challenge!{% elsif isShopNow %}SHOP NOW{% else %}Try CuraLin{% endif %}</a>
 
 <style>
   #back-to-top-btn {
