--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -70,6 +70,7 @@
 
   {% render 'onboarding-curalin-call-expert', background_color: '#FAF5E9', border: false, isHideImageOnMobile: true %}
   {% render 'product-faq-section', bgColor: "var(--lighter-green)" %}
+  {% render 'product-all-in-one-back-to-top', isShopNow: true %}
 </div>
 
 {% comment %} Temp {% endcomment %}
