--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -70,7 +70,11 @@
 
   {% render 'onboarding-curalin-call-expert', background_color: '#FAF5E9', border: false, isHideImageOnMobile: true %}
   {% render 'product-faq-section', bgColor: "var(--lighter-green)" %}
-  {% render 'product-all-in-one-back-to-top', isShopNow: true %}
+
+  {% if isCuralin %}
+    {% render 'product-all-in-one-back-to-top', isShopNow: true %}
+  {% endif %}
+  
 </div>
 
 {% comment %} Temp {% endcomment %}
