--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -1,15 +1,15 @@
-<a id="back-to-top-btn">{% if isThirtyDay %}Join the Challenge!{% elsif isShopNow %}SHOP NOW{% else %}Try CuraLin{% endif %}</a>
+<a id="back-to-top-btn">{% if isThirtyDay %}{{ ctaTitle }}{% else %}Try CuraLin{% endif %}</a>
 
 <style>
   #back-to-top-btn {
-    background: {% if isThirtyDay %}#FFB22D{% elsif isShopNow %}#FFB22D {% else %} linear-gradient(#5d8448, var(--dark-green)){% endif %};
-    border: 1px solid {% if isThirtyDay %}#FFB22D{% elsif isShopNow %}#FFB22D {% else %}#468734{% endif %};
+    background: {% if isThirtyDay %}#FFB22D {% else %} linear-gradient(#5d8448, var(--dark-green)){% endif %};
+    border: 1px solid {% if isThirtyDay %}#FFB22D {% else %}#468734{% endif %};
     color:{% if isThirtyDay %}#404733 {% else %}#ffffff{% endif %};
   }
 
    #back-to-top-btn:hover {
-      background: {% if isThirtyDay %}#FFB22D{% elsif isShopNow %}#FFB22D {% else %}#404733{% endif %};
-      border: {% if isThirtyDay %}#FFB22D{% elsif isShopNow %}#FFB22D {% else %}#404733{% endif %};
+      background: {% if isThirtyDay %}#FFB22D {% else %}#404733{% endif %};
+      border: {% if isThirtyDay %}#FFB22D {% else %}#404733{% endif %};
   }
 
  #back-to-top-btn {
@@ -18,7 +18,7 @@
       font-weight: bold;
       height: {% unless isThirtyDay %}50px {% endunless %};
       text-align: center;
-      border-radius: {% if isThirtyDay %}0{%elsif isShopNow %}0{% else %}30px {% endif %};
+      border-radius: {% unless isThirtyDay %} 30px {% endunless %};
       position: fixed;
       bottom: 30px;
       left: 100px;
