--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -72,7 +72,7 @@
   {% render 'product-faq-section', bgColor: "var(--lighter-green)" %}
 
   {% if isCuralin %}
-    {% render 'product-all-in-one-back-to-top', isShopNow: true %}
+    {% render 'product-all-in-one-back-to-top', isThirtyDay: true, ctaTitle: "SHOP NOW" %}
   {% endif %}
   
 </div>
