--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -13,7 +13,7 @@
   {% render 'lps-video-reviews', maintitle: 'Customers Reviews Of CuraLin' %}
   {% render 'thirty-day-commitement' %}
   {% render 'product-all-in-one-thirty-day-money-back' %}
-  {% render 'product-all-in-one-back-to-top', isThirtyDay: true, ctaTitle: "Join the Challenge!" %}
+  {% render 'product-all-in-one-back-to-top', isThirtyDay: true, ctaTitle: "Join the Challenge!", textColor: #404733 %}
 </div>
 
 <style>
