--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -4,7 +4,7 @@
   #back-to-top-btn {
     background: {% if isThirtyDay %}#FFB22D {% else %} linear-gradient(#5d8448, var(--dark-green)){% endif %};
     border: 1px solid {% if isThirtyDay %}#FFB22D {% else %}#468734{% endif %};
-    color:{% if isThirtyDay %}#404733 {% else %}#ffffff{% endif %};
+    color:{% if isThirtyDay %}{{ textColor }} {% else %}#ffffff{% endif %};
   }
 
    #back-to-top-btn:hover {
