--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -48,6 +48,7 @@
       {% render 'curalin-pack-info', product: product, isCuralinRender: true %}
     {% else %}
       {% render 'product-supplement-pack-info', product: product, isLastRender: true %}
+      {% render 'curalin-ingredients-section', product: product, isCuralinRender: true %}
     {% endif %}
   {% endif %}
 
