--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -1,4 +1,4 @@
-{% assign experienses = "“Curalife has kept my sugar within normal ranges even after I eat things that I probably shouldn't!”*Alon M.
+{% assign experienses = "“Curalife has kept my sugacuralin-pack-r within normal ranges even after I eat things that I probably shouldn't!”*Alon M.
 |“This is the greatest! My husband started taking this! Finally found a product that works! “*Linda V.
 |“I have tried so many different supplements with no results. This one is amazing and i am excited. I just purchased my second bottle.”*Michael Murillo Sr.
 |“It is so wonderful to find something that really works. I feel so much better!!”*Leanne A.
@@ -108,7 +108,7 @@
     }
 
     .curalin-pack-info-section:nth-of-type(even) .tabbed-content {
-      margin-left: 30%;
+      margin-left: unset;
     }
 
     .curalin-pack-info-section:nth-of-type(even) .product-image-wrapper,
