--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -5,6 +5,17 @@
 |“Have been taking CuraLin over the last four months and am beyond pleased with the results.”*Michael E.
 
 " | split: '|' %}
+{% assign ingredients = "product-supplement-pack-info-ingredient-icon-turmeric.png*Turmeric
+|product-supplement-pack-info-ingredient-icon-picrorhiza-kurroa.png*Picrorhiza Kurroa 
+|product-supplement-pack-info-ingredient-icon-amla.png*Amla
+|product-supplement-pack-info-ingredient-icon-cinnamomum-zeylanicum.png*Cinnamomum Zeylanicum 
+|product-supplement-pack-info-ingredient-icon-swertia-chirata.png*Swertia Chirata
+|product-supplement-pack-info-ingredient-icon-bitter-melon.png*Bitter Melon
+|product-supplement-pack-info-ingredient-icon-gymnema-sylvestre.png*Gymnema Sylvestre 
+|product-supplement-pack-info-ingredient-icon-fenugree .png*Fenugree    
+
+" | split: '|' %}
+
 
 <section class="curalin-pack-info-section instance-{{ index }}">
   <div class="container">
