--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -12,7 +12,8 @@
 |product-supplement-pack-info-ingredient-icon-swertia-chirata.png*Swertia Chirata
 |product-supplement-pack-info-ingredient-icon-bitter-melon.png*Bitter Melon
 |product-supplement-pack-info-ingredient-icon-gymnema-sylvestre.png*Gymnema Sylvestre 
-|product-supplement-pack-info-ingredient-icon-fenugree .png*Fenugree    
+|product-supplement-pack-info-ingredient-icon-fenugree.png*Fenugree 
+|product-supplement-pack-info-ingredient-icon-syzyguim-cumini.png*Syzygium Cumini     
 
 " | split: '|' %}
 
