--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -24,12 +24,20 @@
     <div class="tabbed-content tabs-side">
       <nav class="tabs">
         <ul>
-          <li><a href="#health-benefits-{{ index }}" class="active">Benefits/Description <i>></i></a></li>
+        {% for ingredient in ingredients %}
+
+            <li><a href="#health-benefits-{{ index }}" class="active">
+                <img src="{{ ingredient | asset_url | split: "*" | first }}" alt="">
+
+                {{ ingredient | split: "*" | last }}
+                 <i>></i></a></li>       
+        {% endfor %}
+          {% comment %} <li><a href="#health-benefits-{{ index }}" class="active">Benefits/Description <i>></i></a></li>
           <li><a href="#instructions-{{ index }}">Usage Instructions <i>></i></a></li>
           {% if product.metafields.custom.ingredients.value %}
             <li><a href="#ingredients-{{ index }}">Ingredients <i>></i></a></li>
           {% endif %}
-          <li><a href="#facts-{{ index }}">Reviews <i>></i></a></li>
+          <li><a href="#facts-{{ index }}">Reviews <i>></i></a></li> {% endcomment %}
         </ul>
       </nav>
 
