--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -12,7 +12,7 @@
 |product-supplement-pack-info-ingredient-icon-swertia-chirata.png*Swertia Chirata
 |product-supplement-pack-info-ingredient-icon-bitter-melon.png*Bitter Melon
 |product-supplement-pack-info-ingredient-icon-gymnema-sylvestre.png*Gymnema Sylvestre 
-|product-supplement-pack-info-ingredient-icon-fenugree.png*Fenugree 
+|product-supplement-pack-info-ingredient-icon-fenugreek.png*Fenugreek 
 |product-supplement-pack-info-ingredient-icon-syzyguim-cumini.png*Syzygium Cumini     
 
 " | split: '|' %}
@@ -313,7 +313,7 @@
       }
 
       .curalin-pack-info-section .tabbed-content.tabs-side .tabs li {
-        display: block;
+        display: flex;
       }
     }
 
