--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -37,7 +37,7 @@
 
       <div class="content">
         {% for ingredient in ingredients %}
-        <div id="health-benefits-{{ index }}" class="item active always-active" data-title="<img src='{{ ingredient | asset_url | split: "*" | first }}' alt=''>
+        <div id="health-benefits-{{ index }}" class="item active always-active" data-title="
 
         {{ ingredient | split: "*" | last }}">
           <div class="health-benefits item-content">
