--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -27,7 +27,7 @@
         {% for ingredient in ingredients %}
 
             <li><a href="#health-benefits-{{ index }}" class="active">
-                <img src="{{ ingredient | asset_url | split: "*" | first }}" alt="">
+                <img src="{{ ingredient | asset_url | split: "*" | first }}" width="68" height="53" alt="">
 
                 {{ ingredient | split: "*" | last }}
                  <i>></i></a></li>       
@@ -39,8 +39,8 @@
         {% for ingredient in ingredients %}      
         <div id="health-benefits-{{ index }}" class="item active always-active"       
          data-title="
-        {{ ingredient | split: "*" | last }}">
-        <img src="{{ ingredient | asset_url | split: "*" | first }}" alt="">
+        {{ ingredient | split: "*" | last }}" data-image='<img src="{{ ingredient | asset_url | split: "*" | first }}" width="68" height="53" alt="">'>
+        
           <div class="health-benefits item-content">
           {% for benefit in product.metafields.custom.benefits_images.value %}
             <div class="health-benefit">
