--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -37,9 +37,12 @@
 
       <div class="content">
         {% for ingredient in ingredients %}      
-        <div id="health-benefits-{{ index }}" class="item active always-active"       
+        <div id="health-benefits-{{ index }}" class="item active always-active" 
+              
          data-title="
-        {{ ingredient | split: "*" | last }}" data-image='<img src="{{ ingredient | asset_url | split: "*" | first }}" width="68" height="53" alt="">'>
+        {{ ingredient | split: "*" | last }}">
+
+        <img src="{{ ingredient | asset_url | split: "*" | first }}" width="68" height="53" alt="">
         
           <div class="health-benefits item-content">
           {% for benefit in product.metafields.custom.benefits_images.value %}
