--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -36,13 +36,14 @@
       </nav>
 
       <div class="content">
-        {% for ingredient in ingredients %}      
+        {% for ingredient in ingredients %}  
+        <div id="health-benefits-{{ index }} class="item active always-active"> <img src="{{ ingredient | asset_url | split: "*" | first }}" width="68" height="53" alt=""></div>    
         <div id="health-benefits-{{ index }}" class="item active always-active" 
               
          data-title="
         {{ ingredient | split: "*" | last }}">
 
-        <img src="{{ ingredient | asset_url | split: "*" | first }}" width="68" height="53" alt="">
+       
         
           <div class="health-benefits item-content">
           {% for benefit in product.metafields.custom.benefits_images.value %}
