--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -15,6 +15,7 @@
       <nav class="tabs">
         <ul>
             {% for ingredient in product.metafields.custom.ingredients.value %}
+                {% assign ingredient_handle = ingredient | downcase | replace: ' ', '-' %}
                 <li><a href="#health-benefits-{{ index }}" class="active">
                     <img src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
                     {{ ingredient }}
