--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -25,7 +25,7 @@
       </nav>
 
       <div class="content">
-        {% for ingredient in ingredients %}  
+        {% for ingredient in product.metafields.custom.ingredients.value %}  
         
         <div id="health-benefits-{{ index }}" class="item active always-active"            
          data-title="
