--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -17,7 +17,7 @@
             {% for ingredient in product.metafields.custom.ingredients.value %}       
                 <li><a href="#health-benefits-{{ index }}" class="active">
                     {% assign ingredient_handle = ingredient | downcase | replace: ' ', '-' %}
-                    <img src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
+                    <img style="position:absolte;" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
                     {{ ingredient }}
                  <i>></i></a></li>     
               {% endfor %}
