--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -17,7 +17,7 @@
             {% for ingredient in product.metafields.custom.ingredients.value %}       
                 <li><a href="#health-benefits-{{ index }}" class="active">
                     {% assign ingredient_handle = ingredient | downcase | replace: ' ', '-' %}
-                    <img style="position:absolte;" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
+                    <img  src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
                     {{ ingredient }}
                  <i>></i></a></li>     
               {% endfor %}
@@ -27,7 +27,7 @@
       <div class="content">
         {% for ingredient in product.metafields.custom.ingredients.value %}  
             {% assign ingredient_handle = ingredient | downcase | replace: ' ', '-' %}
-            <img src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
+            <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
             <div id="health-benefits-{{ index }}" class="item active always-active" data-title="{{ ingredient }}">       
 
             </div>
@@ -42,6 +42,10 @@
   <style>
    .content {
      max-width: 100%;
+    }
+
+    .content .product-suppliment-mb {
+        position: absolute;
     }
     #supplement-page section.curalin-pack-ingredients-section .titles {
       flex-direction: revert;
