--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -48,7 +48,7 @@
 
 
     .content .product-suppliment-mb {
-        position: absolute;
+        display: none;
     }
 
   
@@ -272,7 +272,10 @@
     }
 
     @media all and (min-width: 1130px) {
-  
+    .content .product-suppliment-mb {
+        display: block;
+        position: absolute;
+    }
       .curalin-pack-ingredients-section .health-benefits {
           justify-content: center;
         }
