--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -273,7 +273,7 @@
 
     @media all and (min-width: 1130px) {
     .content .product-suppliment-mb {
-        display: block;
+        display: unset;
         position: absolute;
     }
       .curalin-pack-ingredients-section .health-benefits {
