--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -48,7 +48,8 @@
 
 
     .content .product-suppliment-mb {
-        display: none;
+        display: block;
+        position: absolute;
     }
 
   
@@ -273,8 +274,7 @@
 
     @media all and (min-width: 1130px) {
     .content .product-suppliment-mb {
-        display: unset;
-        position: absolute;
+       display: none;
     }
       .curalin-pack-ingredients-section .health-benefits {
           justify-content: center;
