--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -30,7 +30,13 @@
             <img class="product-suppliment-mb" src="{{ "product-supplement-pack-info-ingredient-icon-" | append: ingredient_handle | append: ".png" | asset_url }}" width="68" height="53" alt="Ingredient" loading="lazy">
             <div id="health-benefits-{{ index }}" class="item active always-active" data-title="{{ ingredient }}">       
                 <div class="health-benefits item-content">
-              
+                    {% for ingridientData in product.metafields.custom.ingredients_data.value %}
+                      <div class="faq-item">
+                        <h3 class="title-data">{{ ingridientData.title }}</h3>
+                        <div class="impact-title">{{ ingridientData.impactTitle }}</div>
+                        <p class="impact-title">{{ ingridientData.impactTitle }}</p>
+                      </div>
+                    {% endfor %}
                 </div>
             </div>
         {% endfor %}
