--- a/snippets/curalin-ingredients-section.liquid
+++ b/snippets/curalin-ingredients-section.liquid
@@ -31,7 +31,6 @@
             <div id="health-benefits-{{ index }}" class="item active always-active" data-title="{{ ingredient }}">
                 {% for ingridientData in product.metafields.custom.ingredients_data.value %}     
                     <div class="health-benefits item-content">      
-                            <div class="title-data">{{ ingridientData.title }}</div>
                             <div class="subtitle-data">Impact:</div>
                             <p class="impact-desc">{{ ingridientData.impact }}</p>
                             <div class="subtitle-data">Active compound:</div>
@@ -59,6 +58,10 @@
     .content .product-suppliment-mb {
         display: block;
         position: absolute;
+    }
+
+    .title-data {
+
     }
 
   
